--- a/code/prueba_tecnica.ipynb
+++ b/code/prueba_tecnica.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1048,7 @@
        "[98 rows x 27 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1438,7 @@
        "[305 rows x 27 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
        "[305 rows x 26 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "[303 rows x 4 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
        "22                                           T  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2264,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2611,7 @@
        "[216 rows x 25 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2624,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2984,7 +2984,7 @@
        "[216 rows x 25 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2997,7 +2997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3706,7 +3706,7 @@
        "[23 rows x 28 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3719,7 +3719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4232,7 +4232,7 @@
        "[16 rows x 29 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4251,6 +4251,20 @@
    "metadata": {},
    "source": [
     "## Punto 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La realización de este puntoi se realizo en https://sqliteonline.com/ , para mayo información por favor dirigirse al archico .docx en la carpeta docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Punto 4"
    ]
   }
  ],
