--- a/code/prueba_tecnica.ipynb
+++ b/code/prueba_tecnica.ipynb
@@ -4257,7 +4257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La realización de este puntoi se realizo en https://sqliteonline.com/ , para mayo información por favor dirigirse al archico .docx en la carpeta docs"
+    "La realización de este punto se realizo en https://sqliteonline.com/ , para mayo información por favor dirigirse al archico .docx en la carpeta docs, el archivo punto_3.sqlite.sql tiene el query para la creación de las tablas"
    ]
   },
   {
@@ -4265,6 +4265,57 @@
    "metadata": {},
    "source": [
     "# Punto 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta prueba de AWS se muestra documentada en la documentacion.docx presente en la carpeta docs.\n",
+    "\n",
+    "El archivo de Querys se encuentra en [SQL Notebook](tickit-sample-notebook.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Punto 5\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta prueba de Azure se muestra documentada en la documentacion.docx en la carpeta docs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Punto 6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Punto 7\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La arquitectura creada y diseñada muestras sus diferentes fases de diseño y solución en la documentacion.docx en la carpeta docs"
    ]
   }
  ],
