Up powerBi punyo 8

--- a/code/prueba_tecnica.ipynb
+++ b/code/prueba_tecnica.ipynb
@@ -6926,6 +6926,20 @@
    "source": [
     "La arquitectura creada y diseñada muestras sus diferentes fases de diseño y solución en la documentacion.docx en la carpeta docs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Punto 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo .pbix se encuentra adjunto "
+   ]
   }
  ],
  "metadata": {
